; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_lookup_combo_double.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_lookup_combo_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GHB_DOUBLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @ghb_lookup_combo_double(i32* %0, i32* %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store double 0.000000e+00, double* %3, align 8
  br label %20

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @GHB_DOUBLE, align 4
  %15 = call i32* @lookup_combo_value(i32* %12, i32* %13, i32 %14)
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call double @ghb_value_get_double(i32* %16)
  store double %17, double* %7, align 8
  %18 = call i32 @ghb_value_free(i32** %6)
  %19 = load double, double* %7, align 8
  store double %19, double* %3, align 8
  br label %20

20:                                               ; preds = %11, %10
  %21 = load double, double* %3, align 8
  ret double %21
}

declare dso_local i32* @lookup_combo_value(i32*, i32*, i32) #1

declare dso_local double @ghb_value_get_double(i32*) #1

declare dso_local i32 @ghb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
